<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/InitialActivityBackground"
    tools:context=".SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/inner_toolbar"
            style="@style/BackgroundAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:title="Settings"
            app:navigationIcon="@drawable/ic_arrow_back_screen" />
    </com.google.android.material.appbar.AppBarLayout>

   <LinearLayout
        android:id="@+id/about"
        android:background="@android:color/white"
        style="@style/BackgroundAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/provided_by"
            android:textStyle="bold" />

       <com.google.android.material.textview.MaterialTextView
           android:layout_width="240dp"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
           android:layout_marginBottom="16dp"
           android:text="@string/provider_description"
           android:textSize="12sp" />

       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/source_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/SrcSettingIcon"
            android:layout_gravity="center_vertical"
            android:scaleType="center" />
       </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/one"
        style="@style/BackgroundAppBar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/about">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/temperature"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            style="@style/ColorNavigationIconTint"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            app:singleSelection="true"
            app:selectionRequired="true"
            android:layout_marginEnd="16dp"
            android:id="@+id/groupTemp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degreeC"
                android:tag="C"
                style="?attr/materialButtonOutlinedStyle"
                android:text="@string/c"
                android:layout_width="80dp"
                android:layout_height="40dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/degreeF"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/f" />

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/two"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/BackgroundAppBar"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/one">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/wind_speed"
            android:layout_width="wrap_content"
            style="@style/ColorNavigationIconTint"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            app:singleSelection="true"
            app:selectionRequired="true"
            android:layout_marginEnd="16dp"
            android:id="@+id/groupWindSpeed"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/speed_ms"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:text="@string/m_s"
                android:textAllCaps="false" />

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/speed_kmh"
                android:textAllCaps="false"
                android:text="@string/km_h"
                android:layout_width="80dp"
                android:layout_height="40dp"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/three"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        style="@style/BackgroundAppBar"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/two">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/pressure"
            android:layout_width="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="16dp"
            style="@style/ColorNavigationIconTint"
            android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButtonToggleGroup
            app:singleSelection="true"
            app:selectionRequired="true"
            android:layout_marginEnd="16dp"
            android:id="@+id/groupPressure"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/pressure_mmHg"
                android:textAllCaps="false"
                android:text="@string/mmhg"
                android:layout_width="80dp"
                android:layout_height="40dp"/>

            <com.google.android.material.button.MaterialButton
                style="?attr/materialButtonOutlinedStyle"
                android:id="@+id/pressure_hPa"
                android:textAllCaps="false"
                android:text="@string/hpa"
                android:layout_width="80dp"
                android:layout_height="40dp"/>

        </com.google.android.material.button.MaterialButtonToggleGroup>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>