<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/toolbarMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/inner_toolbarMenu"
                app:title="Поиск городов"
                style="@style/BackgroundAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                app:navigationIcon="@drawable/ic_arrow_back_screen" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/location"
            app:endIconContentDescription="icon_search"
            app:endIconDrawable="@drawable/ic_search"
            app:endIconMode="custom"
            app:startIconContentDescription="location"
            app:startIconDrawable="@drawable/ic_not_location"
            app:layout_constraintTop_toBottomOf="@id/toolbarMenu">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionSearch"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:id="@+id/predictions_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_menu_predictions_list"
            app:layout_constraintTop_toBottomOf="@id/search_layout">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:indeterminate="true"
                android:visibility="gone"
                tools:visibility="visible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/predictions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/predictions_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/favorites">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_gravity="center"
                android:contentDescription="@string/img_description_fvorites"
                android:src="@drawable/ic_star_filled"/>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            style="@style/MainTextViewStyle"
            android:layout_margin = "10dp"
            android:text="@string/lable_favorites_locaton" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_menu_favourites_list"
            app:layout_constraintTop_toBottomOf="@id/predictions_container"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>