<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/refresh"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <ListView
                android:id="@android:id/list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_menu_btn"
            style="@style/IconButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/ic_menu_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_setting_btn"
            style="@style/IconButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            app:icon="@drawable/ic_settings_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_city_name_tv"
            style="@style/MainTextViewStyleGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Кишинёв" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_date_tv"
            style="@style/MainTextViewStyleGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_city_name_tv"
            tools:text="14 Марта" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <ImageView
            android:id="@+id/main_weather_image"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:contentDescription="@string/content_description_clowdx3_image"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@mipmap/partly_cloudy2x" />


        <ImageView
            android:id="@+id/main_weather_condition_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            app:layout_constraintBottom_toTopOf="@+id/main_temp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/ic_sunny" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_weather_condition_description"
            style="@style/MainTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/main_weather_condition_icon"
            app:layout_constraintEnd_toStartOf="@+id/main_weather_image"
            app:layout_constraintStart_toEndOf="@+id/main_weather_condition_icon"
            app:layout_constraintTop_toTopOf="@+id/main_weather_condition_icon"
            tools:text="Clear sky" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/main_temp"
            style="@style/MainTextViewStyleGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:textSize="96sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toStartOf="@+id/main_weather_image"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="25\u00B0" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="@+id/main_temp"
            app:layout_constraintStart_toStartOf="@+id/main_temp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/tv_min"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MainTextViewStyle"
                    android:id="@+id/main_temp_min_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    tools:text="12\u00B0" />

            </LinearLayout>

            <LinearLayout
                style="@style/DividerStyle"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/tv_medium_temp"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_temp_medium_tv"
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    tools:text="19 \u00B0" />

            </LinearLayout>

            <LinearLayout
                style="@style/DividerStyle"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="false"
                    android:text="@string/tv_max_temp"
                    android:textSize="12sp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_temp_max_tv"
                    style="@style/MainTextViewStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center"
                    tools:text="28\u00B0" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="26dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_height="3dp"
            android:background="#707070"
            app:layout_constraintTop_toBottomOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:layout_constraintVertical_bias="0.25">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                   style="@style/AdditionalWeatherInforationIconStyle"
                    android:contentDescription="@string/content_decription_cold_image"
                    android:src="@drawable/ic_cold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_pressure_mu_tv"
                    style="@style/AdditionalWeatherInforamtionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    tools:text="1,5 гПа" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    style="@style/AdditionalWeatherInforationIconStyle"
                    android:contentDescription="@string/content_description_humidity_image"
                    android:src="@drawable/ic_humidity" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_humidity_tv"
                    style="@style/AdditionalWeatherInforamtionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    tools:text="68 %" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    style="@style/AdditionalWeatherInforationIconStyle"
                    android:contentDescription="@string/content_description_flag_image"
                    android:src="@drawable/ic_flag_24" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_wind_speed_tv"
                    style="@style/AdditionalWeatherInforamtionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    tools:text="5 м/с" />

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/linearLayout3"
            app:layout_constraintTop_toTopOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.0">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                style="@style/MainTextViewStyle"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Восход"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/content_description_sunrise_image"
                    android:src="@drawable/ic_sunrise" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_sunrise_tv"
                    style="@style/AdditionalWeatherInforamtionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    tools:text="04:30" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                style="@style/MainTextViewStyle"
                android:text="Закат"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/content_description_sunset_image"
                    android:src="@drawable/ic_sunset" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/main_sunset_tv"
                    style="@style/AdditionalWeatherInforamtionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="8dp"
                    tools:text="22:12" />

            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_bottom_sheets"
        style="?attr/bottomSheetStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:background="@drawable/bg_main_bottom_sheets"
        app:behavior_hideable="false"
        app:behavior_peekHeight="160dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:layout_gravity="end">

        <LinearLayout
            android:id="@+id/main_bottom_sheets_container"
            android:layout_width="match_parent"
            style="@style/BackgroundSheeps"
            android:layout_height="wrap_content"
            android:elevation="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ColorBottomSheets"
                android:background="@drawable/bg_main_bottom_sheets_swiper"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="4dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/main_hourly_list"
                android:layout_width="match_parent"
                style="@style/BackgroundSheeps"
                tools:listitem="@layout/item_main_hourly"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                android:layout_marginBottom="8dp"
                tools:layout_height="80dp"/>

            <LinearLayout
                style="@style/DividerStyle"
                android:layout_width="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>

            <FrameLayout
                android:id="@+id/fragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </FrameLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>